Update lists at 20240308-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -444,6 +443,7 @@ allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
+allow 185.220.101.59;
 allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
@@ -844,7 +844,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
@@ -935,6 +934,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
@@ -954,6 +954,7 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
+allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1144,6 +1145,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
+allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1403,6 +1405,7 @@ allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
+allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
@@ -1511,6 +1514,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 34.238.106.77;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1531,7 +1535,6 @@ allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.240;
-allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
 allow 45.139.122.176;
@@ -1606,10 +1609,10 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.207.105.56;
 allow 5.252.224.53;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1709,6 +1712,7 @@ allow 84.247.165.53;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
+allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.209.176.103;
 allow 85.215.76.62;
@@ -1808,4 +1812,5 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
