--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -444,6 +443,7 @@ deny 185.220.101.55;
 deny 185.220.101.56;
 deny 185.220.101.57;
 deny 185.220.101.58;
+deny 185.220.101.59;
 deny 185.220.101.6;
 deny 185.220.101.60;
 deny 185.220.101.61;
@@ -844,7 +844,6 @@ deny 209.141.55.26;
 deny 209.141.59.116;
 deny 209.141.62.71;
 deny 212.21.66.6;
-deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
 deny 213.136.84.104;
@@ -935,6 +934,7 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.24.6;
 deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
@@ -954,6 +954,7 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
+deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
@@ -1144,6 +1145,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
+deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1403,6 +1405,7 @@ deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
+deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
@@ -1511,6 +1514,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
+deny 34.238.106.77;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1531,7 +1535,6 @@ deny 45.138.16.203;
 deny 45.138.16.222;
 deny 45.138.16.230;
 deny 45.138.16.240;
-deny 45.138.16.249;
 deny 45.138.16.42;
 deny 45.138.16.76;
 deny 45.139.122.176;
@@ -1606,10 +1609,10 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.207.105.56;
 deny 5.252.224.53;
 deny 5.255.100.126;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1709,6 +1712,7 @@ deny 84.247.165.53;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
+deny 85.204.116.211;
 deny 85.204.116.88;
 deny 85.209.176.103;
 deny 85.215.76.62;
@@ -1808,4 +1812,5 @@ deny 95.211.210.103;
 deny 95.211.244.28;
 deny 95.211.7.148;
 deny 96.27.198.133;
+deny 96.42.26.63;
 deny 96.66.15.152;
