--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -121,6 +121,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
+allow 2600:3c01::f03c:94ff:fe64:8854;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -135,6 +136,7 @@ allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
 allow 2602:fc24:13:e::1234;
 allow 2602:fc24:13:e::fefe;
 allow 2602:fc24:18:148f::1;
@@ -241,6 +243,7 @@ allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::130;
 allow 2620:18c:0:192::131;
