--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -208,7 +209,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.247.122;
-allow 178.31.137.63;
+allow 178.31.20.56;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -553,7 +554,6 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.46;
-allow 192.155.80.29;
 allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -822,6 +822,7 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
+allow 205.185.113.136;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -942,7 +943,6 @@ allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
 allow 23.94.36.142;
-allow 2400:8907::f03c:94ff:fe2d:80f4;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
 allow 2.58.56.220;
@@ -951,7 +951,6 @@ allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c01::f03c:94ff:fe64:8854;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1004,6 +1003,7 @@ allow 2605:6400:20:104e::2;
 allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
+allow 2605:6400:20:37f:dcff:c5bb:a796:58b4;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
@@ -1569,7 +1569,6 @@ allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.79.144.222;
 allow 45.79.177.21;
-allow 45.79.236.149;
 allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
@@ -1611,7 +1610,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.45.167.35;
 allow 5.252.224.53;
 allow 5.255.100.126;
 allow 5.255.100.219;
@@ -1640,6 +1638,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.160.67.10;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
