--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -120,6 +120,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
+allow 2600:3c01::f03c:94ff:fe64:399a;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -259,7 +260,6 @@ allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
-allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
