--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -120,6 +120,7 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
+deny 2600:3c01::f03c:94ff:fe64:399a;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
@@ -259,7 +260,6 @@ deny 2620:18c:0:192::141;
 deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
-deny 2620:18c:0:192::145;
 deny 2620:18c:0:192::146;
 deny 2620:18c:0:192::147;
 deny 2620:18c:0:192::148;
