--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -120,6 +120,7 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
+set_real_ip_from 2600:3c01::f03c:94ff:fe64:399a;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
@@ -259,7 +260,6 @@ set_real_ip_from 2620:18c:0:192::141;
 set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
 set_real_ip_from 2620:18c:0:192::144;
-set_real_ip_from 2620:18c:0:192::145;
 set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
