--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -260,6 +260,7 @@ set_real_ip_from 2620:18c:0:192::141;
 set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
 set_real_ip_from 2620:18c:0:192::144;
+set_real_ip_from 2620:18c:0:192::145;
 set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
