--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.172.134.26;
 allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
+allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
@@ -113,7 +114,6 @@ allow 109.70.100.71;
 allow 114.199.75.111;
 allow 118.163.74.160;
 allow 125.212.241.131;
-allow 128.127.180.156;
 allow 128.31.0.13;
 allow 135.125.205.25;
 allow 135.125.55.237;
@@ -303,7 +303,6 @@ allow 185.220.100.243;
 allow 185.220.100.244;
 allow 185.220.100.245;
 allow 185.220.100.246;
-allow 185.220.100.247;
 allow 185.220.100.248;
 allow 185.220.100.249;
 allow 185.220.100.250;
@@ -1259,6 +1258,7 @@ allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1296,7 +1296,6 @@ allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1524,8 +1523,6 @@ allow 37.228.129.128;
 allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
-allow 37.48.70.156;
-allow 3.84.106.208;
 allow 38.97.116.244;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1611,6 +1608,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.252.224.53;
+allow 52.5.49.185;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
