--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -427,6 +427,7 @@ allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -464,7 +465,6 @@ allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
