--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -9,6 +9,7 @@ deny 103.172.134.26;
 deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
+deny 103.208.86.5;
 deny 103.251.167.10;
 deny 103.251.167.20;
 deny 103.253.24.18;
@@ -113,7 +114,6 @@ deny 109.70.100.71;
 deny 114.199.75.111;
 deny 118.163.74.160;
 deny 125.212.241.131;
-deny 128.127.180.156;
 deny 128.31.0.13;
 deny 135.125.205.25;
 deny 135.125.55.237;
@@ -303,7 +303,6 @@ deny 185.220.100.243;
 deny 185.220.100.244;
 deny 185.220.100.245;
 deny 185.220.100.246;
-deny 185.220.100.247;
 deny 185.220.100.248;
 deny 185.220.100.249;
 deny 185.220.100.250;
@@ -1259,6 +1258,7 @@ deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
+deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -1296,7 +1296,6 @@ deny 2a0b:f4c0:16c:5::1;
 deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1524,8 +1523,6 @@ deny 37.228.129.128;
 deny 37.228.129.63;
 deny 37.252.255.135;
 deny 37.48.120.196;
-deny 37.48.70.156;
-deny 3.84.106.208;
 deny 38.97.116.244;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1611,6 +1608,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.252.224.53;
+deny 52.5.49.185;
 deny 5.255.100.126;
 deny 5.255.100.219;
 deny 5.255.100.26;
