--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -95,7 +95,6 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.169.33.163;
-allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -164,7 +163,6 @@ allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
-allow 167.99.208.41;
 allow 168.100.9.100;
 allow 168.100.9.97;
 allow 171.25.193.20;
@@ -182,6 +180,7 @@ allow 172.232.161.206;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.131.84;
+allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.237.206.68;
@@ -221,7 +220,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.138.255.32;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -858,6 +856,7 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.160.88.146;
 allow 217.27.189.205;
+allow 217.95.20.147;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -884,6 +883,7 @@ allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
 allow 23.129.64.215;
+allow 23.129.64.216;
 allow 23.129.64.217;
 allow 23.129.64.218;
 allow 23.129.64.219;
@@ -891,7 +891,6 @@ allow 23.129.64.220;
 allow 23.129.64.221;
 allow 23.129.64.222;
 allow 23.129.64.223;
-allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.226;
 allow 23.129.64.227;
@@ -942,6 +941,7 @@ allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
 allow 23.94.36.142;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
 allow 2.58.56.220;
@@ -1100,6 +1100,7 @@ allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
+allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
@@ -1107,7 +1108,6 @@ allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
-allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
 allow 2620:18c:0:192::226;
 allow 2620:18c:0:192::227;
@@ -1154,7 +1154,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c206:2161:161::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
@@ -1473,6 +1472,7 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
+allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1523,7 +1523,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.213.221.25;
+allow 44.210.157.88;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1552,7 +1552,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
@@ -1571,6 +1570,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
@@ -1579,6 +1579,7 @@ allow 45.95.169.184;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.195.221.9;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1677,7 +1678,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 80.139.97.191;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
