--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -116,6 +116,7 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bc8:710:3672:dc00:ff:fe42:19db;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
@@ -270,6 +271,7 @@ deny 2620:18c:0:192::212;
 deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
 deny 2620:18c:0:192::215;
+deny 2620:18c:0:192::216;
 deny 2620:18c:0:192::217;
 deny 2620:18c:0:192::218;
 deny 2620:18c:0:192::219;
@@ -277,7 +279,6 @@ deny 2620:18c:0:192::220;
 deny 2620:18c:0:192::221;
 deny 2620:18c:0:192::222;
 deny 2620:18c:0:192::223;
-deny 2620:18c:0:192::224;
 deny 2620:18c:0:192::225;
 deny 2620:18c:0:192::226;
 deny 2620:18c:0:192::227;
@@ -323,7 +324,6 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
-deny 2a02:c206:2095:2624::1;
 deny 2a02:c206:2161:161::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:c207:3006:6498::1;
@@ -642,6 +642,7 @@ deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
+deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
