--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -29,6 +28,7 @@ allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
+allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
@@ -36,6 +36,7 @@ allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.77.79;
 allow 104.244.77.80;
+allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
@@ -53,6 +54,7 @@ allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.12.3;
+allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
@@ -109,7 +111,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -142,11 +143,9 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
-allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
@@ -253,7 +252,6 @@ allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
-allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
@@ -800,7 +798,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -950,7 +947,6 @@ allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00:e000:4ee::1;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1051,6 +1047,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -1274,7 +1271,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1468,6 +1464,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1523,7 +1520,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.221.36.130;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1609,6 +1605,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.252.224.53;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1644,6 +1641,7 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.88.228.136;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1658,7 +1656,6 @@ allow 66.220.242.222;
 allow 67.219.109.141;
 allow 70.53.133.193;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.208.106.128;
@@ -1675,6 +1672,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1772,6 +1770,7 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
+allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
