--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -109,7 +109,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -120,7 +119,6 @@ deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
@@ -221,6 +219,7 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f6b7::1337;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
+deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -443,7 +442,6 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
-deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -637,6 +635,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
