--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -6,6 +6,7 @@ allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
+allow 2001:40e8:0:f090::100;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
@@ -259,7 +260,6 @@ allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
-allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
@@ -294,7 +294,6 @@ allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:f:f:f:f:1d1f:b701;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
