--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -559,6 +559,7 @@ allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
+allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
