--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -114,7 +115,6 @@ set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 135.125.205.25;
-set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.128.222.68;
 set_real_ip_from 138.59.18.110;
@@ -266,6 +266,7 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.174.136.114;
+set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
@@ -422,6 +423,7 @@ set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
+set_real_ip_from 185.220.101.47;
 set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
@@ -525,7 +527,6 @@ set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
-set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.70.8.45;
 set_real_ip_from 185.70.8.46;
 set_real_ip_from 185.7.33.146;
@@ -1381,6 +1382,7 @@ set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
+set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
@@ -1512,7 +1514,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.195.204.117;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1627,6 +1628,7 @@ set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
+set_real_ip_from 52.6.46.194;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
@@ -1806,5 +1808,4 @@ set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
