Update lists at 20240311-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -255,7 +255,6 @@ allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
 allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
-allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
@@ -302,6 +301,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:1c00::1cd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
@@ -417,7 +417,6 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
