--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -255,7 +255,6 @@ deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
 deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
-deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
 deny 2620:18c:0:192::145;
@@ -302,6 +301,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
+deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:6d42:1242:1c00::1cd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
@@ -417,7 +417,6 @@ deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
-deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
