--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -193,6 +192,7 @@ set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
+set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.17.174.198;
 set_real_ip_from 178.175.131.141;
@@ -215,7 +215,6 @@ set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
-set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.105.48.40;
@@ -483,6 +482,7 @@ set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
+set_real_ip_from 185.222.66.187;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
@@ -512,7 +512,6 @@ set_real_ip_from 185.243.218.89;
 set_real_ip_from 185.243.218.95;
 set_real_ip_from 185.244.192.175;
 set_real_ip_from 185.244.192.184;
-set_real_ip_from 185.246.128.161;
 set_real_ip_from 185.246.188.67;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
@@ -544,7 +543,6 @@ set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
-set_real_ip_from 191.101.31.46;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
@@ -633,8 +631,13 @@ set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.35.18.105;
+set_real_ip_from 193.35.18.120;
 set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
+set_real_ip_from 193.35.18.94;
+set_real_ip_from 193.35.18.95;
+set_real_ip_from 193.35.18.96;
+set_real_ip_from 193.35.18.98;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
@@ -824,7 +827,6 @@ set_real_ip_from 207.154.193.51;
 set_real_ip_from 207.154.234.107;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
-set_real_ip_from 209.141.38.84;
 set_real_ip_from 209.141.40.44;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
@@ -861,7 +863,6 @@ set_real_ip_from 23.129.64.138;
 set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
-set_real_ip_from 23.129.64.142;
 set_real_ip_from 23.129.64.143;
 set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
@@ -937,10 +938,17 @@ set_real_ip_from 23.94.36.142;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2.57.122.215;
+set_real_ip_from 2.57.122.246;
+set_real_ip_from 2.57.122.58;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.90;
+set_real_ip_from 2.58.95.45;
+set_real_ip_from 2.58.95.47;
+set_real_ip_from 2.58.95.53;
+set_real_ip_from 2.58.95.59;
 set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
@@ -1078,7 +1086,6 @@ set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
 set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
-set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
 set_real_ip_from 2620:18c:0:192::144;
 set_real_ip_from 2620:18c:0:192::145;
@@ -1126,6 +1133,7 @@ set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
+set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:6d42:1242:1c00::1cd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
@@ -1241,7 +1249,6 @@ set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
-set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1500,7 +1507,6 @@ set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
-set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
@@ -1514,6 +1520,8 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 45.128.232.102;
+set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1607,7 +1615,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.252.224.53;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1631,9 +1638,9 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
-set_real_ip_from 52.70.185.77;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.204.243.208;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1644,7 +1651,6 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1746,7 +1752,6 @@ set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
-set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
@@ -1780,6 +1785,14 @@ set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
+set_real_ip_from 94.103.124.184;
+set_real_ip_from 94.131.110.58;
+set_real_ip_from 94.131.111.196;
+set_real_ip_from 94.131.111.69;
+set_real_ip_from 94.131.111.73;
+set_real_ip_from 94.131.120.40;
+set_real_ip_from 94.131.120.41;
+set_real_ip_from 94.131.120.63;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
@@ -1802,6 +1815,8 @@ set_real_ip_from 95.111.238.0;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.164.16.105;
+set_real_ip_from 95.164.16.80;
 set_real_ip_from 95.164.22.4;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
@@ -1809,4 +1824,5 @@ set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
