--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -255,7 +255,6 @@ set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
 set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
-set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
 set_real_ip_from 2620:18c:0:192::144;
 set_real_ip_from 2620:18c:0:192::145;
@@ -302,6 +301,7 @@ set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
+set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:6d42:1242:1c00::1cd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
@@ -417,7 +417,6 @@ set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
-set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
