Update lists at 20240311-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -84,7 +84,6 @@ allow 2001:67c:6ec:203:192:42:116:218;
 allow 2001:67c:6ec:203:192:42:116:219;
 allow 2001:67c:6ec:203:192:42:116:220;
 allow 2001:67c:6ec:203:192:42:116:221;
-allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
 allow 2001:67c:6ec:203:218:33ff:fe44:5517;
@@ -255,6 +254,7 @@ allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
 allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
+allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
@@ -291,7 +291,6 @@ allow 2a00:1169:112:de0::;
 allow 2a00:1169:117:5510::;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
-allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -655,6 +654,11 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::9a01:890f;
+allow 2a10:1fc0:1::ac76:4d41;
+allow 2a10:1fc0:1::c0a:270f;
+allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
