--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -84,7 +84,6 @@ deny 2001:67c:6ec:203:192:42:116:218;
 deny 2001:67c:6ec:203:192:42:116:219;
 deny 2001:67c:6ec:203:192:42:116:220;
 deny 2001:67c:6ec:203:192:42:116:221;
-deny 2001:67c:6ec:203:218:33ff:fe44:5513;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
 deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
@@ -255,6 +254,7 @@ deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
 deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
+deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
 deny 2620:18c:0:192::145;
@@ -291,7 +291,6 @@ deny 2a00:1169:112:de0::;
 deny 2a00:1169:117:5510::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
-deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -655,6 +654,11 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a10:1fc0:1::1078:9b3b;
+deny 2a10:1fc0:1::9a01:890f;
+deny 2a10:1fc0:1::ac76:4d41;
+deny 2a10:1fc0:1::c0a:270f;
+deny 2a10:1fc0:1::d717:cb95;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
