--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -108,7 +108,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -509,6 +508,7 @@ allow 2a0b:f4c2:1::165;
 allow 2a0b:f4c2:1::166;
 allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
+allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
 allow 2a0b:f4c2:1::171;
 allow 2a0b:f4c2:1::172;
@@ -519,6 +519,7 @@ allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
@@ -613,7 +614,9 @@ allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
 allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
 allow 2a0b:f4c2:4::106;
