--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,7 +110,6 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
-deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -126,8 +125,11 @@ deny 139.99.172.11;
 deny 141.239.149.94;
 deny 141.98.11.62;
 deny 141.98.168.34;
+deny 141.98.168.35;
+deny 141.98.168.36;
+deny 141.98.168.51;
+deny 141.98.168.53;
 deny 142.44.234.69;
-deny 142.93.38.80;
 deny 143.110.156.176;
 deny 143.42.110.237;
 deny 143.42.199.223;
@@ -322,7 +324,9 @@ deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
+deny 185.220.101.101;
 deny 185.220.101.102;
+deny 185.220.101.103;
 deny 185.220.101.104;
 deny 185.220.101.105;
 deny 185.220.101.106;
@@ -377,6 +381,7 @@ deny 185.220.101.165;
 deny 185.220.101.166;
 deny 185.220.101.167;
 deny 185.220.101.168;
+deny 185.220.101.169;
 deny 185.220.101.17;
 deny 185.220.101.170;
 deny 185.220.101.171;
@@ -389,6 +394,7 @@ deny 185.220.101.177;
 deny 185.220.101.178;
 deny 185.220.101.179;
 deny 185.220.101.18;
+deny 185.220.101.180;
 deny 185.220.101.181;
 deny 185.220.101.182;
 deny 185.220.101.183;
@@ -806,7 +812,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -834,11 +839,8 @@ deny 205.185.121.170;
 deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
-deny 207.154.193.51;
-deny 207.154.234.107;
 deny 208.109.215.188;
 deny 208.109.36.224;
-deny 209.141.38.84;
 deny 209.141.40.44;
 deny 209.141.46.203;
 deny 209.141.50.178;
@@ -919,6 +921,7 @@ deny 23.137.251.62;
 deny 23.152.24.77;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1353,6 +1356,7 @@ deny 2a0b:f4c2:1::165;
 deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
+deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
 deny 2a0b:f4c2:1::171;
 deny 2a0b:f4c2:1::172;
@@ -1363,6 +1367,7 @@ deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
+deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
@@ -1457,7 +1462,9 @@ deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
 deny 2a0b:f4c2:4::104;
 deny 2a0b:f4c2:4::105;
 deny 2a0b:f4c2:4::106;
@@ -1659,7 +1666,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.145.195.135;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1670,11 +1676,11 @@ deny 54.36.101.21;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.86.185.148;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
-deny 64.226.85.129;
 deny 64.227.115.78;
 deny 64.5.123.66;
 deny 65.109.30.253;
@@ -1820,9 +1826,7 @@ deny 94.16.116.81;
 deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
-deny 94.177.106.37;
 deny 94.177.106.46;
-deny 94.177.106.55;
 deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
