--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -126,8 +125,11 @@ set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.168.34;
+set_real_ip_from 141.98.168.35;
+set_real_ip_from 141.98.168.36;
+set_real_ip_from 141.98.168.51;
+set_real_ip_from 141.98.168.53;
 set_real_ip_from 142.44.234.69;
-set_real_ip_from 142.93.38.80;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 143.42.110.237;
 set_real_ip_from 143.42.199.223;
@@ -322,7 +324,9 @@ set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
 set_real_ip_from 185.220.101.102;
+set_real_ip_from 185.220.101.103;
 set_real_ip_from 185.220.101.104;
 set_real_ip_from 185.220.101.105;
 set_real_ip_from 185.220.101.106;
@@ -377,6 +381,7 @@ set_real_ip_from 185.220.101.165;
 set_real_ip_from 185.220.101.166;
 set_real_ip_from 185.220.101.167;
 set_real_ip_from 185.220.101.168;
+set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
 set_real_ip_from 185.220.101.170;
 set_real_ip_from 185.220.101.171;
@@ -389,6 +394,7 @@ set_real_ip_from 185.220.101.177;
 set_real_ip_from 185.220.101.178;
 set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
+set_real_ip_from 185.220.101.180;
 set_real_ip_from 185.220.101.181;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
@@ -806,7 +812,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -834,11 +839,8 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
-set_real_ip_from 207.154.193.51;
-set_real_ip_from 207.154.234.107;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
-set_real_ip_from 209.141.38.84;
 set_real_ip_from 209.141.40.44;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
@@ -919,6 +921,7 @@ set_real_ip_from 23.137.251.62;
 set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -1353,6 +1356,7 @@ set_real_ip_from 2a0b:f4c2:1::165;
 set_real_ip_from 2a0b:f4c2:1::166;
 set_real_ip_from 2a0b:f4c2:1::167;
 set_real_ip_from 2a0b:f4c2:1::168;
+set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
 set_real_ip_from 2a0b:f4c2:1::171;
 set_real_ip_from 2a0b:f4c2:1::172;
@@ -1363,6 +1367,7 @@ set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
+set_real_ip_from 2a0b:f4c2:1::180;
 set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
@@ -1457,7 +1462,9 @@ set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
 set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
 set_real_ip_from 2a0b:f4c2:4::106;
@@ -1659,7 +1666,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.145.195.135;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1670,11 +1676,11 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.86.185.148;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 64.226.85.129;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 65.109.30.253;
@@ -1820,9 +1826,7 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
-set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
-set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
