--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -108,7 +108,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -509,6 +508,7 @@ set_real_ip_from 2a0b:f4c2:1::165;
 set_real_ip_from 2a0b:f4c2:1::166;
 set_real_ip_from 2a0b:f4c2:1::167;
 set_real_ip_from 2a0b:f4c2:1::168;
+set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
 set_real_ip_from 2a0b:f4c2:1::171;
 set_real_ip_from 2a0b:f4c2:1::172;
@@ -519,6 +519,7 @@ set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
+set_real_ip_from 2a0b:f4c2:1::180;
 set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
@@ -613,7 +614,9 @@ set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
 set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
 set_real_ip_from 2a0b:f4c2:4::106;
