--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -108,6 +108,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -398,7 +399,6 @@ deny 2a03:e600:100::70;
 deny 2a03:e600:100::71;
 deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
-deny 2a04:52c0:103:234b::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
